2004-02-08  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/*.c: Use g_object_ref/unref instead of the
	g_mime_object_ref/unref and g_mime_stream_ref/unref.

2004-02-08  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-utils.c (rfc2047_encode): Changed to take a safemask
	arg instead of a gboolean phrase arg since we never used 'phrase'
	directly.
	(g_mime_utils_header_encode_phrase): Pass IS_PSAFE as second
	argument.
	(g_mime_utils_header_encode_text): Pass IS_ESAFE as second
	argument.

2004-02-07  Jeffrey Stedfast  <fejj@ximian.com>

	* README: Updated.

	* configure.in: Bumped version to 2.1.2

	* examples/README: New README explaining the purpose of each of
	the example sources.

2004-02-06  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-parser.c (parser_construct_message): If we've been
	told to respect the Content-Length header, then parse the length
	value and calculate the offset of the beginning of the next
	message.
	(g_mime_parser_get_respect_content_length): New function to get
	whether we've been told to respect the Content-Length header.
	(g_mime_parser_set_respect_content_length): New function to set
	this option.
	(parser_offset): Now takes a private struct pointer rather than
	the parser object since it didn't really need it. Also makes it
	usable from check_boundary().
	(g_mime_parser_tell): Updated.
	(check_boundary): Only scan for end-boundaries if we've reached
	the projected end-of-content offset as calculated using the
	Content-Length header.

2004-02-06  Jeffrey Stedfast  <fejj@ximian.com>

	* configure.in: Generate examples/Makefile

	* gmime/gmime-utils.c (g_mime_utils_generate_message_id):
	Simplified and updated for g_gethostbyname_r() API changes.

	* gmime/gmime-error.h: Changed the #define of GMIME_ERROR_QUARK to
	just be the GQuark variable. Also added GMIME_ERROR_IS_SYSTEM() to
	decide if an error is a system error (aka errno) or a GMime error.

	* gmime/gmime.c: Make gmime_error_quark an actual variable and