@@ -1,3 +1,9 @@
+2004-02-13  Jeffrey Stedfast  <fejj@ximian.com>
+
+	* gmime/gmime-parser.c (parser_construct_multipart): Pop our end
+	boundary before scanning postface text data. Prevents a hang if a
+	multipart brokenly has 2 end boundaries.
+
 2004-02-08  Jeffrey Stedfast  <fejj@ximian.com>
 
 	* gmime/*.c: Use g_object_ref/unref instead of the
